@@ -25,7 +25,10 @@ ham_bench_SOURCES = berkeleydb.h \
 				  hamsterdb.h \
 				  hamsterdb.cc \
 				  main.cc \
-				  metrics.h
+				  metrics.h \
+				  misc.h \
+				  mutex.h \
+				  timer.h
 
 ham_bench_LDADD = $(top_builddir)/src/.libs/libhamsterdb.a \
 				  $(BOOST_CHRONO_LIBS) $(BOOST_SYSTEM_LIBS) \
